@@ -1,3 +1,7 @@
+2009-05-24 15:30 Ali aliov@xfce.org
+	*: Fix minor issue of displaying adapter icon on desktop computers
+	*: Minor changes in the glade file.
+
 2009-05-21 15:00 Ali aliov@xfce.org
 	*: Properly free the inhibitor data when the inhibitor
 	*: Don't accept events at all if they were not mapped.
